[package]
name = "idea-graphs"
version = "0.1.0"
authors = ["Samuel Sleight <samuel.sleight@gmail.com>"]
edition = "2018"

[dependencies]
datagraph = { path = "libs/datagraph" }

piston = "0.49.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.72.0"

[workspace]
